DHRI@GC temporary content...

--- a/graduate-center/participate/index.html
+++ b/graduate-center/participate/index.html
@@ -6,9 +6,16 @@ title_short: "DH Research Institute"
 {% include header.html %}
 {% include nav.html %}
 
-<section id="" class="">
+<section id="" class="py-4">
   <div class="container-fluid text-white" style="min-height:300px;">
-    <p>This is the intro</p>
+    <p>What we want on this page: </p>
+    <p>- You can participate in two different ways:</p>
+        <p>&nbsp;&nbsp;&nbsp; (a) apply to be part of the network in a formal way</p>
+        <p>&nbsp;&nbsp;&nbsp; (b) organize a DHRI in your institution independently, based on the material that you can find on this site.</p>
+
+    <p>- Another way to contribute to the project is to help us make the curricular materials better. You can do so by forking our workshops on GitHub and work on them independently and then create a pull request.</p>
+
+    <p>[On this page, once we have upcoming local institutes, we can also list those...]</p>
   </div>
 </section>
 
