--- a/graduate-center/schedule/index.html
+++ b/graduate-center/schedule/index.html
@@ -13,8 +13,8 @@ title_short: "DH Research Institute"
     <p class="lead">The following is an overview of the schedule when DHRI was hosted in New York City in 2018. Timing and order of workshops in DHRI in June 2020 are subject to change.</p>
   </div>
   
-  <div class="container-fluid text-white py-3">
-    <img src="/assets/images/2018-dhri/schedule.png" class="img-fluid" />
+  <div class="container-fluid text-white py-3 text-center">
+    <img src="/assets/images/2018-dhri/schedule.png" class="img-fluid" style="width:2000px;" />
   </div>
 
   <div class="container text-dark py-3">
