--- a/about/contact/index.html
+++ b/about/contact/index.html
@@ -9,11 +9,60 @@ title_short: "DH Research Institute"
 <section id="" class="py-4">
   <div class="container text-white">
     <h1>{{ site.data.contact.header }}</h1>
-    <p>{{ site.data.contact.main-text }}</p>
+    {{ site.data.contact.main-text }}
   </div>
 </section>
 
+{% if site.data.contact.email-form %}
+
+  <section id="" class="py-4 bg-light">
+    <div class="container text-dark">
+
+      <h2>{{ site.data.contact.email-form-header }}</h2>
+      <hr class="w-100 text-left" style="margin-block-start: 2em; margin-block-end: 2em; margin-inline-start: 0; margin-inline-end: 0;" />
+      {{ site.data.contact.email-form-text }}
+      <form id="contactform" action="//formspree.io/info@dhinstitutes.org" method="POST">
+        <div class="form-group row">
+          <label for="name" class="col-3 form-control-label col-sm-3 text-xs-right">Name</label>
+          <div class="col-9">
+            <input type="text" class="form-control" name="name" placeholder="Enter name" required="required" />
+          </div>
+        </div>
+        <div class="form-group row">
+          <label for="email" class="form-control-label col-3 text-xs-right">Email Address</label>
+          <div class="col-9">
+            <input type="email" class="form-control" name="_replyto" placeholder="Enter email" required="required" />
+          </div>
+        </div>
+        <div class="form-group row">
+          <label for="name" class="form-control-label col-3 text-xs-right">Message</label>
+          <div class="col-9">
+            <textarea name="message" id="message" class="form-control" rows="8" required="required" placeholder="Enter your message"></textarea>
+          </div>
+        </div>
+        <div class="form-group row">
+          <div class="offset-3 col-9 text-xs-right">
+              <button type="submit" class="btn btn-primary">Send Message</button>
+            </div>
+          </div>
+          <input type="text" name="_gotcha" style="display:none" />
+          <input type="hidden" name="_subject" value="Digital Research Institute Inquiry" />
+          <input type="hidden" name="_next" value="thanks.html" />
+        </form>
+    </div>
+  </section>
+{% endif %}
+
+
 {% if site.data.contact.gc-map %}
+
+<section id="" class="pt-4 pb-2">
+  <div class="container text-white">
+    <h2>{{ site.data.contact.gc-map-header }}</h2>
+    {{ site.data.contact.gc-map-text }}
+  </div>
+</section>
+
 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3022.6079016681215!2d-73.98620104888522!3d40.748652543207584!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c259a9c6c0cfed%3A0x6e762b3df1696ae2!2s365+5th+Ave%2C+New+York%2C+NY+10016!5e0!3m2!1sen!2sus!4v1453063683238" width="100%" height="400px" frameborder="0" style="border:0" allowfullscreen=""></iframe>
 {% endif %}
 
