adding correct dates and a data-oriented object for it

--- a/apply-2020/index.html
+++ b/apply-2020/index.html
@@ -47,8 +47,8 @@ application-page: true
 
   <div class="container-fluid text-dark pt-4 pb-4" style="background-color:#ec9521;">
     <div class="text-center w-100">
-      <p class="lead m-0 font-weight-bold">Applications are due March 2, 2020.</p>
-      <p class="mt-2"><a href="http://bit.ly/apply-to-dhri" target="_blank" class="btn btn-danger">Apply now</a></p clas>
+      <p class="lead m-0 font-weight-bold">Applications are due {{ site.data.apply-2020.due-date | date: "%A, %B %e, %Y" }}.</p>
+      <p class="mt-2"><a href="http://bit.ly/apply-to-dhri" target="_blank" class="btn btn-danger">Apply now</a></p>
     </div>
   </div>
 
