all recent updates

--- a/graduate-center/schedule/index.html
+++ b/graduate-center/schedule/index.html
@@ -4,6 +4,7 @@ title_short: "DH Research Institute"
 breadcrumbs:
   - label: "DHRI@GC"
     link: "/graduate-center/"
+    disabled: true
   - label: "Schedule"
     link: "/graduate-center/schedule/"
 ---
