--- a/partners/neh/index.html
+++ b/partners/neh/index.html
@@ -4,6 +4,7 @@ title_short: "DH Research Institute"
 breadcrumbs:
   - label: "Partners"
     link: "/partners/"
+    disabled: true
   - label: "National Endowment for the Humanities"
     link: "/partners/neh/"
 ---
