--- a/apply/index.html
+++ b/apply/index.html
@@ -13,7 +13,7 @@ breadcrumbs:
 
 
 
-<section class="jumbotron mb-0 shadow-lg jumbotron-background-image" id="jumbotron-apply-2020"></section>
+<section class="jumbotron mb-0 shadow-lg jumbotron-background-image" id="jumbotron-apply-2020" style="background-position-y: 35% !important;"></section>
 
 
 
@@ -39,19 +39,19 @@ breadcrumbs:
       <div class="col-12">
         <h2 class="text-orange">What is needed to apply?</h2>
         <h4 class="text-orange">1. Application form</h3>
-        <p class="lead">If you want to prepare your answers for the application form offline, you can <a href="/assets/application-form-2020.pdf">download a PDF with all the questions for the form</a>.</p>
+        <p class="lead">If you want to prepare your answers for the application form offline, you can <a href="/assets/pdf/application-form-2020.pdf">download a PDF with all the questions for the form</a>.</p>
         <p class="lead">The form includes questions about:</p>
         <ul>
         {% for q in site.data.apply-2020.application-questions %}
           <li>{{ q.details-requested }}&nbsp;<small class="text-muted">{{ q.why }}</small></li>
         {% endfor %}
         </ul>
-        <h4 class="text-orange">2. A 2-page CV/resume</h3>
+        <h4 class="text-orange">2. A CV/resume (2 pages, maximum)</h3>
         <p class="lead">We request a CV/resume in order to better understand where you are situated within your institution as well as in your larger field of research and digital humanities (if at all).</p>
-        <p><em>The application form will ask for your 2-page CV/resume.</em></p>
+        <p><em>Submitting the application will require you uploading a CV/resume of maximum 2 pages.</em></p>
         <h4 class="text-orange">3. A letter of support</h3>
-        <p class="lead">We require a letter of agreement from the group the applicant proposes to run a DHRI for, which acknowledges the relationship and the group's willingness to publicize and run the workshop. It needs to be signed by a person in a decision-making role in the organization (and not be yourself). If you intend to run a DHRI at your place of employment, please include a letter from your direct supervisor stating their agreement and support of your efforts.</p>
-        <p><em>The application form will ask for your letter of support.</em></p>
+        <p class="lead">We require a letter of support from the group the applicant proposes to run a DHRI for, which acknowledges the relationship and the group's willingness to publicize and run the workshop. It needs to be signed by a person in a decision-making role in the organization (and not be yourself). If you intend to run a DHRI at your place of employment, please include a letter from your direct supervisor stating their agreement and support of your efforts.</p>
+        <p><em>Submitting the application will require you uploading a letter of support.</em></p>
       </div>
     </div>
   </div>
