--- a/about/contact/index.html
+++ b/about/contact/index.html
@@ -39,13 +39,13 @@ breadcrumbs:
         <div class="form-group row">
           <label for="name" class="col-3 form-control-label col-sm-3 text-xs-right">Name</label>
           <div class="col-9">
-            <input type="text" class="form-control" name="name" placeholder="Enter name" required="required" />
+            <input type="text" class="form-control" name="name" id="name" placeholder="Enter name" required="required" />
           </div>
         </div>
         <div class="form-group row">
           <label for="email" class="form-control-label col-3 text-xs-right">Email Address</label>
           <div class="col-9">
-            <input type="email" class="form-control" name="_replyto" placeholder="Enter email" required="required" />
+            <input type="email" class="form-control" name="_replyto" id="email" placeholder="Enter email" required="required" />
           </div>
         </div>
         <div class="form-group row">
@@ -63,6 +63,9 @@ breadcrumbs:
           <input type="hidden" name="_subject" value="Digital Research Institute Inquiry" />
           <input type="hidden" name="_next" value="thanks.html" />
         </form>
+        <div class="alert alert-success center-block submit-success" style="display: none;">We have received your email and will be in touch as soon as possible.</div>
+        <div class="alert alert-danger center-block submit-fail" style="display: none;">Please fill in all fields of the form.</div>
+
     </div>
   </section>
 {% endif %}
