Updates for applications 2021

--- a/graduate-center/schedule/index.html
+++ b/graduate-center/schedule/index.html
@@ -16,7 +16,7 @@ breadcrumbs:
   
   <div class="container text-white py-3">
     <h1>Schedule</h1>
-    <p class="lead">The following is an overview of the schedule when DHRI was hosted in New York City in 2018. Timing and order of workshops in DHRI in June 2020 are subject to change.</p>
+    <p class="lead">The following is an overview of the schedule when DHRI was hosted in New York City in 2018. Timing and order of workshops in DHRI 2021 are subject to change.</p>
   </div>
   
   <div class="container-fluid text-white py-3 text-center">
