--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ sitemap:
 
 
 
-<section class="jumbotron mb-0 shadow-md jumbotron-background-image" id="jumbotron-home" style="background-position-y: 35% !important"></section>
+<section class="jumbotron mb-0 shadow-md jumbotron-background-image" id="jumbotron-apply-2020" style="background-position-y: 35% !important"></section>
 
 
 
@@ -158,20 +158,20 @@ sitemap:
       </div>
       <div class="col-12 col-md-6">
         <p class="lead">
-          In 2020, we will continue expanding the Digital Humanities Research Institutes with a new group of 15 participants. We invite participants to join us in New York City, participate in an introductory ten-day institute on June 15–24, 2020, and join our network of more than 30 community leaders of grassroots digital humanities research institutes at universities, libraries, archives, museums, and scholarly organizations across the United States.
+          In 2021, we will continue expanding the Digital Humanities Research Institutes with a new group of participants. We invite you to participate in an eight-day institute in July 2021 and join our network of more than 30 community leaders of grassroots digital humanities research institutes at universities, libraries, archives, museums, and scholarly organizations across the United States.
         </p>
         <p>
-          During the June 2020 workshop in New York City, participants will receive intensive training on foundational digital research methods, assistance with planning local digital humanities workshops, and mentorship from past participants. Over the following academic year, participants will develop their own local digital humanities research institutes and contribute reflections on their experiences to a Guide to Leading Digital Humanities Research Institutes.
+          During the July 2021 workshop, participants will receive intensive training in foundational digital research methods, assistance with planning local digital humanities workshops, and mentorship from past participants. Over the following academic year, participants will develop their own local digital humanities research institutes and contribute reflections on their experiences to a Guide to Leading Digital Humanities Research Institutes.
         </p>
         <p>
           In addition to digital skill training, the DHRI connects participants with mentors and a network of community leaders, supporting participants’ professional growth in their local contexts. Our goal is to expand access to digital humanities training, effectively lowering the barrier to entry that some scholars experience when using digital tools.
         </p>
         <hr />
         <p>Want to see an example of what the schedule will look like? <a href="/graduate-center/schedule/">See last cycle's schedule here</a>.</p>
-        <p>Want to preview the application form? Take a look at <a href="/assets/pdf/application-form-2020.pdf">the preparation sheet</a>.</p>
+        <p>Want to read more about the application process? Take a look at our <a href="/apply/">application</a> page.</p>
         <hr />
         <div class="mx-auto text-center mw-75">
-          <p class="lead">Are you interested in joining us in 2020–22?</p>
+          <p class="lead">Are you interested in joining us in 2021–22?</p>
           <p><a class="btn btn-success" href="/apply/"><strong>Read more on our application page.</strong></a></p>
         </div>
       </div>
