--- a/partners/neh/index.html
+++ b/partners/neh/index.html
@@ -17,7 +17,7 @@ breadcrumbs:
     <h1>National Endowment for the Humanities</h1>
     <p class="lead">The Digital Humanities Research Institutes project is funded through a generous grant from the National Endowment for the Humanities (NEH).</p>
     <p>The Graduate Center was awarded a $250,000 grant from the NEH to support an expanded version of the Digital Humanities Research Institute, a 10-day residential workshop, first held in June 2018, that brought together humanities faculty, administrators, and curators. In the following year, participants returned to their own campus or organization and led local institutes based on the GC's model. Through this train-the-trainer approach, the first DHRI award reached more than 250 additional participants.</p>
-    <p><em>The Digital Humanities Research Institutes: Further Expanding Digital Humanities Communities of Practice</em>, will extend the workshop and training to a new cohort of 15 participants in June 2020. Upon completion, DHRI’s network will include more than 30 community leaders of grassroots digital humanities research institutes at universities, libraries, archives, museums, and scholarly organizations across the United States.</p>
+    <p><em>The Digital Humanities Research Institutes: Further Expanding Digital Humanities Communities of Practice</em>, will extend the workshop and training to a new cohort of participants in July 2021. Upon completion, DHRI’s network will include more than 30 community leaders of grassroots digital humanities research institutes at universities, libraries, archives, museums, and scholarly organizations across the United States.</p>
   </div>
 </section>
 
