Adding application preparation sheet

--- a/apply/index.html
+++ b/apply/index.html
@@ -40,7 +40,7 @@ breadcrumbs:
         <h2 class="text-orange">What is needed to apply?</h2>
         
         <h4 class="text-orange">1. Application form</h3>
-        <p class="lead">To apply, both applicants should complete <a href="http://bit.ly/apply-to-dhri-2021" target="_blank" class="text-white border-bottom text-decoration-none"><strong>a single application form</strong></a>.</p>
+        <p class="lead">To apply, both applicants should complete <a href="http://bit.ly/apply-to-dhri-2021" target="_blank" class="text-white border-bottom text-decoration-none"><strong>a single application form</strong></a>. If you want to prepare your application before entering the information into the form, you can use <a href="/assets/pdf/application-preparation-sheet-2021.pdf" target="_blank" class="text-white border-bottom text-decoration-none">the Application Preparation Sheet</a> for this year's applications to ready your answers.</p>
         
         <h4 class="text-orange">2. A CV/resume (2 pages maximum)</h3>
         <p class="lead">We request a CV/resume from each applicant in order to better understand where you are situated within your institution as well as in your larger field of research and digital humanities (if at all).</p>
