--- a/curricula/index.html
+++ b/curricula/index.html
@@ -3,7 +3,7 @@ title: "Digital Humanities Research Institute"
 title_short: "DH Research Institute"
 breadcrumbs:
   - label: "Curricula"
-    link: "/curricula/"
+    link: "https://curriculum.dhinstitutes.org/"
 ---
 
 {% include header.html %}
