--- a/january_2018_curriculum.html
+++ b/january_2018_curriculum.html
@@ -5,7 +5,7 @@ is_front: true
 breadcrumbs: []
 sitemap:
   exclude: "yes"
-redirect: '/curricula/'
+redirect: 'https://curriculum.dhinstitutes.org/'
 ---
 
 {% include header.html %}
