--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@ sitemap:
     </div>
   </div>
 </section>
+<!-- 
 
-
-{% include apply-now.html %}
+{% include apply-now.html %} -->
 
 
 <section id="about" class="bg-light"><!-- w-100 d-block bg-dark-blue text-white -->
