--- a/index.html
+++ b/index.html
@@ -187,8 +187,8 @@ sitemap:
   </div>
 </section>
 
-
-{% include apply-now.html %}
+<!-- 
+{% include apply-now.html %} -->
 
 
 <section class="jumbotron mb-0 shadow-md jumbotron-background-image" id="jumbotron-collaboration"></section>
