--- a/people/index.html
+++ b/people/index.html
@@ -49,6 +49,15 @@ breadcrumbs:
           {% endfor %}
         </div>
       </div>
+      
+      <!-- Community Leaders -->
+      <div class="tab-pane text-dark" id="pills-community-leaders" role="tabpanel" aria-labelledby="pills-community-leaders-tab">
+        <div class="row">
+          {% for person in faculty_current %}
+            {% include people/_card.html person=person %}
+          {% endfor %}
+        </div>
+      </div>
 
     </div>
   </div>
