--- a/people/index.html
+++ b/people/index.html
@@ -53,7 +53,7 @@ breadcrumbs:
       <!-- Community Leaders -->
       <div class="tab-pane text-dark" id="pills-community-leaders" role="tabpanel" aria-labelledby="pills-community-leaders-tab">
         <div class="row">
-          {% for person in faculty_current %}
+          {% for person in community_leaders %}
             {% include people/_card.html person=person %}
           {% endfor %}
         </div>
