--- a/people/alumni/index.html
+++ b/people/alumni/index.html
@@ -27,6 +27,11 @@ breadcrumbs:
     <div class="row">
       {% for person in faculty_alumni %}{% include people/_card.html person=person %}{% endfor %}
     </div>
+    
+    <h1 class="text-white">Alumni Community Leaders</h1>
+    <div class="row">
+      {% for person in community_leaders_alumni %}{% include people/_card.html person=person %}{% endfor %}
+    </div>
 
   </div>
 </section>
