--- a/people/index.html
+++ b/people/index.html
@@ -58,6 +58,15 @@ breadcrumbs:
           {% endfor %}
         </div>
       </div>
+      
+      <!-- Alumni Community Leaders -->
+      <div class="tab-pane text-dark" id="pills-alumni-community-leaders" role="tabpanel" aria-labelledby="pills-alumni-community-leaders-tab">
+        <div class="row">
+          {% for person in alumni_community_leaders %}
+            {% include people/_card.html person=person %}
+          {% endfor %}
+        </div>
+      </div>
 
     </div>
   </div>
