--- a/graduate-center/schedule/index.html
+++ b/graduate-center/schedule/index.html
@@ -14,11 +14,13 @@ breadcrumbs:
 
 <section id="" class="py-4">
   <div class="container text-white py-3">
+    <div class="card my-2">
     2018 Schedule
     </div>
-    <div>
-      2021 Schedule
+    <div class="card my-2">
+    2021 Schedule
     </div>
+  </div>
 </section>
 
 {% include footer.html %}
