--- a/graduate-center/schedule/index.html
+++ b/graduate-center/schedule/index.html
@@ -15,10 +15,10 @@ breadcrumbs:
 <section id="" class="py-4">
   <div class="container text-white py-3">
     <div class="card my-2">
-    <a href="../2018">2018 Schedule</a>
+    <a href="2018">2018 Schedule</a>
     </div>
     <div class="card my-2">
-      <a href="../2021">2021 Schedule</a>
+      <a href="2021">2021 Schedule</a>
     </div>
   </div>
 </section>
