--- a/about/local/index.html
+++ b/about/local/index.html
@@ -5,7 +5,7 @@ breadcrumbs:
   - label: "About"
     link: "/about/"
   - label: "Local"
-    link: "/local/"
+    link: "/about/local/"
 ---
 
 {% include header.html %}
